--- a/src/styles/components/surface/_menu.scss
+++ b/src/styles/components/surface/_menu.scss
@@ -1,10 +1,3 @@
-//菜单
-%menu__model {
-  border-radius: 6px;
-  padding: 7px 6px 6px;
-  min-width: 200px;
-}
-
 .b3-menu {
   @extend %menu__model;
   .b3-menu__item:not(.b3-menu__item--readonly) {
@@ -31,14 +24,14 @@
     width: calc(100% + 12px);
     padding-top: 4px;
     margin-bottom: 4px;
-    border-bottom: 1px solid rgb(242, 242, 242);
+    border-bottom: 1px solid $rc-menu-separator;
     padding: 0;
     height: 0;
   }
   .b3-menu__item--readonly {
     font-size: 12px;
     line-height: 16px;
-    color: rgba(55, 53, 47, 0.4);
+    color: rgba($rc-theme-on-background, 0.4);
     margin-bottom: 4px;
   }
   .b3-menu__item--custom.b3-menu__item--current {
