--- a/src/styles/components/surface/_bread-crumb.scss
+++ b/src/styles/components/surface/_bread-crumb.scss
@@ -8,21 +8,21 @@
     border-radius: 4px;
     padding: 0 6px;
     height: 24px;
-    line-height: 24px;
+    line-height: 1;
     &:hover {
       background-color: $rc-theme-list-hover;
-    }
-    .protyle-breadcrumb__text:not(:empty) {
-      margin-left: 4px;
     }
 
     svg {
       width: 12px;
       height: 12px;
-      margin: 1px 0 0 1px;
+      margin: 6px 0;
       &.ft__primary {
         color: $rc-theme-on-background;
       }
+    }
+    .protyle-breadcrumb__text:not(:empty) {
+      margin-left: 4px;
     }
   }
   .fn__space {
