--- a/src/styles/components/surface/_menu.scss
+++ b/src/styles/components/surface/_menu.scss
@@ -1,6 +1,6 @@
 .b3-menu {
   @extend %menu__model;
-  .b3-menu__item:not(.b3-menu__item--readonly) {
+  .b3-menu__item:not(.b3-menu__item--readonly):not(.b3-menu__item--custom) {
     height: 31.2px;
     min-width: 0px;
     padding: 8px;
@@ -10,6 +10,16 @@
     border: 1px solid transparent;
     border-radius: 6px;
     transition: all 0.3s ease 0s;
+  }
+  .b3-menu__item--custom {
+    padding: 0 8px;
+    .b3-menu__icon,
+    .fn__hr {
+      display: none;
+    }
+    .b3-menu__label {
+      padding: 6px 0;
+    }
   }
   .b3-menu__submenu {
     $sub-menu-vertical: 10px;
