--- a/src/styles/components/surface/_block-icon.scss
+++ b/src/styles/components/surface/_block-icon.scss
@@ -1,4 +1,4 @@
-//边框上按钮
+//面板上按钮
 .block__icons {
   &.block__icons--active {
     background-color: var(--b3-theme-surface);
@@ -26,5 +26,11 @@
   }
   .b3-form__icon-icon {
     padding-top: 1px;
+  }
+  .b3-text-filed {
+    border: transparent !important;
+    &:focus{
+      border: 1px solid $rc-border-color;
+    }
   }
 }
