--- a/src/styles/components/_editor.scss
+++ b/src/styles/components/_editor.scss
@@ -1,7 +1,27 @@
+//公共属性
 @import "main";
+//题头图
 @import "editor/cover";
+//工具条
 @import "editor/toolbar";
+//工具窗
 @import "editor/util";
+//列表块
+@import "editor/list-block";
+//引述块
+@import "editor/block-quote";
+//代码块
+@import "editor/code-block";
+//表格块
+@import "editor/table";
+
+//提示语
+.protyle-title__input--untitled::after {
+  -webkit-text-fill-color: rgba($rc-theme-on-background, 0.15);
+}
+div[data-tip="键入文字或 '/' 选择"]::after {
+  -webkit-text-fill-color: rgba($rc-theme-on-background, 0.4);
+}
 
 //编辑器
 .layout__center {
@@ -12,14 +32,7 @@
   }
 }
 
-.layout__resize--lr {
-  margin: 0 ($interval - 6px)/2;
-}
-
-.layout__resize:not(.layout__resize--lr) {
-  margin: ($interval - 6px)/2 - $interval  0;
-}
-
+//文档标题
 .protyle-title {
   margin: 0 #{$content-margin} !important;
   max-width: 708px;
@@ -31,22 +44,48 @@
   }
 }
 
+//分割线
+.hr > div {
+  border-color: $rc-border-color !important;
+}
+
+//块标识按钮
+.protyle-gutters {
+  transform: translateX(-6px);
+  border-right: 6px solid transparent;
+  button {
+    // background-color: $rc-theme-background;
+    opacity: 0.6;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+.b3-typography,
 .protyle-wysiwyg {
   .protyle:not(.block__edit) & {
     padding: 20px 96px 235px 96px !important;
     max-width: 708px;
     margin: 0 auto;
   }
-  kbd {
-    font-family: var(--b3-font-family-code) !important;
-  }
-  .list {
-    &::before {
-      background-color: $rc-theme-list-button !important;
-    }
+  > div {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
   }
 }
 
+.protyle:not(.block__edit) .b3-typography {
+  max-width: 900px;
+}
+
+kbd {
+  font-family: var(--b3-font-family-code) !important;
+  border-color: $rc-list-border !important;
+  background-color: rgb(247, 247, 247) !important;
+}
+
+//反链计数
 .protyle-attr--refcount {
   @extend %counter__model;
   height: 22px;
@@ -54,4 +93,24 @@
   padding: 0;
   line-height: 22px;
   font-weight: 600;
+}
+
+//块嵌入
+div[data-type="NodeBlockQueryEmbed"].render-node {
+  background-color: rgb(247, 247, 247) !important;
+  padding: 8px 28px 8px 12px !important;
+  border-radius: 4px;
+  &.protyle-wysiwyg--hl {
+    background-color: $rc-theme-primary-lightest !important;
+  }
+}
+
+//公式块
+.katex {
+  font-size: 100% !important;
+  font-family: KaTeX_Main, HarmonyOS Sans SC, Times New Roman, serif !important;
+}
+
+.protyle-speech {
+  border-color: $rc-border-color;
 }
