--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -15,8 +15,7 @@ $rc-topbar-color: #424243;
 //顶部工具栏悬浮
 $rc-button-background-hover: rgb(242, 242, 242);
 //关闭按钮悬浮
-$rc-close-window:rgba(232, 17, 35, 0.9);
-
+$rc-close-window: rgba(232, 17, 35, 0.9);
 
 //界面
 //界面间空白宽度
@@ -58,7 +57,6 @@ $rc-button-cancel-hover: rgb(230, 243, 255);
 //钉住动画
 $pin-transition: transform 200ms ease;
 
-
 //编辑器两侧边距
 $content-margin: "max(calc(50% - 354px), 96px)";
 
@@ -68,24 +66,45 @@ $rc-menu-shadow: "rgb(0 0 0 / 20%) 0px 0px 1px, rgb(0 0 0 / 16%) 0px 10px 20px";
 //菜单底色
 $rc-menu-background: $rc-theme-background;
 //菜单分割线
-$rc-menu-separator:rgb(242, 242, 242);
+$rc-menu-separator: rgb(242, 242, 242);
 
 //弹窗
 //弹窗阴影
 $rc-dialog-shadow: "rgb(0 0 0 / 20%) 0px 0px 1px, rgb(0 0 0 / 20%) 0px 20px 50px";
 //弹窗关闭按钮底色
-$rc-dialog-close-background:rgb(242, 242, 242);
+$rc-dialog-close-background: rgb(242, 242, 242);
 //弹窗关闭按钮悬浮
 $rc-dialog-close-hover: rgb(234, 234, 234);
 //弹窗分割线
-$rc-dialog-border:rgb(234, 234, 234);
+$rc-dialog-border: rgb(234, 234, 234);
 //弹窗边框弧度
 $rc-dialog-radius: 10px;
+//弹窗蒙版
+$rc-dialog-scrim: rgba(36, 39, 41, 0.3);
 
 //行内工具栏阴影
 $rc-toolbar-shadow: "rgb(0 0 0 / 15%) 0px 5px 10px, rgb(0 0 0 / 20%) 0px 0px 1px";
 
+//滚动条
+$rc-scroll-color: rgba(0, 0, 0, 0.1);
 
+//强调色
+$rc-mark-background: rgb(212, 240, 255);
+
+//提示条底色
+$rc-tooltips-color: rgb(15, 15, 15);
+
+//选中文字底色
+$rc-selection-color: rgba(45, 170, 219, 0.3);
+
+//列表块线条
+$rc-list-border: rgb(213, 213, 213);
+
+//代码块底色
+$rc-code-background: rgb(247, 247, 247);
+
+//通知栏阴影
+$rc-snackbar-shadow: "rgb(0 0 0 / 20%) 0px 0px 1px, rgb(0 0 0 / 10%) 0px 15px 30px";
 
 //顶部工具栏
 %toolbar_before {
@@ -152,6 +171,12 @@ $rc-toolbar-shadow: "rgb(0 0 0 / 15%) 0px 5px 10px, rgb(0 0 0 / 20%) 0px 0px 1px
   border-radius: 6px;
   padding: 7px 6px 6px;
   min-width: 200px;
+  // opacity: 1;
+  // transition: opacity 150ms ease;
+  // &.fn__none{
+  //   display: block !important;
+  //   opacity: 0;
+  // }
 }
 
 //界面上按钮
