--- a/src/styles/components/editor/_util.scss
+++ b/src/styles/components/editor/_util.scss
@@ -1,3 +1,4 @@
+//工具窗
 .protyle-util {
   border-radius: 6px;
   &[style*="width"] {
@@ -19,10 +20,30 @@
         .fn__flex-1 {
           display: none;
         }
-        button:hover{
-            background-color: $rc-theme-surface-button;
+        button:hover {
+          background-color: $rc-theme-surface-button;
         }
       }
+    }
+  }
+  .block__icons {
+    border-radius: 6px 6px 0 0;
+    padding: 0 8px;
+    height: 36px;
+  }
+  textarea {
+    border-radius: 0 0 6px 6px;
+    &,
+    &:hover,
+    &:focus {
+      border: none !important;
+    }
+  }
+  //代码块选择语言
+  .b3-list{
+    min-width: 240px;
+    .b3-list-item{
+      text-transform: capitalize;
     }
   }
 }
