--- a/src/styles/components/surface/_menu.scss
+++ b/src/styles/components/surface/_menu.scss
@@ -1,4 +1,17 @@
 //菜单
+%menu__model {
+  border-radius: 6px;
+  padding: 7px 6px 6px;
+  min-width: 200px;
+  // opacity: 1;
+  // transition: opacity 150ms ease;
+  // &.fn__none{
+  //   display: block !important;
+  //   opacity: 0;
+  // }
+}
+
+//菜单
 .b3-menu {
   @extend %menu__model;
   .b3-menu__item:not(.b3-menu__item--readonly):not(.b3-menu__item--custom) {
