--- a/src/styles/components/surface/_top-bar.scss
+++ b/src/styles/components/surface/_top-bar.scss
@@ -1,4 +1,17 @@
 //顶部工具栏
+%toolbar_before {
+  z-index: 1;
+  width: auto;
+  height: auto;
+  display: flex;
+  position: unset;
+  opacity: 1;
+  transform: none;
+  font-size: 13px;
+  color: $rc-topbar-color;
+}
+
+//顶部工具栏
 .toolbar {
   height: 30px;
   // z-index: 99;
